Revert "Hopefully format fix"
This reverts commit 38d26bce7e8f0462ffe1bd4bf421162cc455182c.

Yeah messed up bar so rolling back

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 	background-color: #1c314a; 
 	
 	/* Safari 4-5, Chrome 1-9 */ 
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1c314a), to(#27425f)); 
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#4a1c1c), to(#2c5f27)); 
 	
 	/* Safari 5.1, Chrome 10+ */ 
 	background: -webkit-linear-gradient(top, #1c314a, #27425f); 
